[gd_scene load_steps=8 format=2]

[ext_resource path="res://Chicken/chicken.gd" type="Script" id=1]
[ext_resource path="res://Sounds/half-life-leaving-now.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sounds/agh_uT05NZS.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/half-life-right-way.mp3" type="AudioStream" id=4]
[ext_resource path="res://Chicken/chicken_model/chickenV2.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[node name="chicken" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0407073, -0.999171, 0, 0.999171, 0.0407073, 0, 1.45577, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.5, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="view_player" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0 )

[node name="ai_tick" type="Timer" parent="."]
autostart = true

[node name="sentryMode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="chaseMode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="gotoMode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_right = 286.0
margin_bottom = 96.0
text = "Mode
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chickenV2" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.336875, 0, 0, 0, 0.336875, 0, 0, 0, 0.336875, 0, 0, 0 )

[connection signal="spot_player" from="." to="." method="set_mode_chase"]
[connection signal="timeout" from="ai_tick" to="." method="_on_ai_tick_timeout"]
